prevent body from scrolling when modal is open on ios

--- a/src/sass/app_2/_common/layouts.scss
+++ b/src/sass/app_2/_common/layouts.scss
@@ -109,6 +109,7 @@
 // Helpers
 .no-scroll {
     overflow: hidden;
+    max-height: 100%;
 }
 
 .no-horizontal-scroll {
